syntax = "proto3";

option csharp_namespace = "gRPCService";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc ReturnParameters (HelloRequest) returns (CountParameters);
}

message HelloRequest {
  string name = 1;
  string address = 2;
  int32 age = 3;
}

message HelloReply {
  string message = 1;
  string response = 2;
}

message CountParameters {
  int32 count = 1;
}